--- a/result/2022-07-14.md
+++ b/result/2022-07-14.md
@@ -1,5 +1,5 @@
 1. [乌克兰宣布与朝鲜断交](https://s.weibo.com//weibo?q=%23%E4%B9%8C%E5%85%8B%E5%85%B0%E5%AE%A3%E5%B8%83%E4%B8%8E%E6%9C%9D%E9%B2%9C%E6%96%AD%E4%BA%A4%23&Refer=top) 3050127
-2. [撞断6根肋骨也要跑到树荫下再躺](https://s.weibo.com//weibo?q=%23%E6%92%9E%E6%96%AD6%E6%A0%B9%E8%82%8B%E9%AA%A8%E4%B9%9F%E8%A6%81%E8%B7%91%E5%88%B0%E6%A0%91%E8%8D%AB%E4%B8%8B%E5%86%8D%E8%BA%BA%23&Refer=top) 2695029
+2. [撞断6根肋骨也要跑到树荫下再躺](https://s.weibo.com//weibo?q=%23%E6%92%9E%E6%96%AD6%E6%A0%B9%E8%82%8B%E9%AA%A8%E4%B9%9F%E8%A6%81%E8%B7%91%E5%88%B0%E6%A0%91%E8%8D%AB%E4%B8%8B%E5%86%8D%E8%BA%BA%23&Refer=top) 2780190
 3. [超级月亮](https://s.weibo.com//weibo?q=%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE&Refer=top) 2409960
 4. [多地现热射病死亡病例](https://s.weibo.com//weibo?q=%23%E5%A4%9A%E5%9C%B0%E7%8E%B0%E7%83%AD%E5%B0%84%E7%97%85%E6%AD%BB%E4%BA%A1%E7%97%85%E4%BE%8B%23&Refer=top) 2121352
 5. [朝鲜承认顿涅茨克和卢甘斯克独立](https://s.weibo.com//weibo?q=%23%E6%9C%9D%E9%B2%9C%E6%89%BF%E8%AE%A4%E9%A1%BF%E6%B6%85%E8%8C%A8%E5%85%8B%E5%92%8C%E5%8D%A2%E7%94%98%E6%96%AF%E5%85%8B%E7%8B%AC%E7%AB%8B%23&Refer=top) 1791548
@@ -8,81 +8,81 @@
 8. [比尔盖茨再捐200亿美元](https://s.weibo.com//weibo?q=%23%E6%AF%94%E5%B0%94%E7%9B%96%E8%8C%A8%E5%86%8D%E6%8D%90200%E4%BA%BF%E7%BE%8E%E5%85%83%23&Refer=top) 1651408
 9. [深圳大学](https://s.weibo.com//weibo?q=%E6%B7%B1%E5%9C%B3%E5%A4%A7%E5%AD%A6&Refer=top) 1614351
 10. [教育优惠](https://s.weibo.com//weibo?q=%23%E6%95%99%E8%82%B2%E4%BC%98%E6%83%A0%23&Refer=top) 1577299
-11. [张小泉客服称菜刀不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E5%AE%A2%E6%9C%8D%E7%A7%B0%E8%8F%9C%E5%88%80%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 1518611
+11. [张小泉客服称菜刀不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E5%B0%8F%E6%B3%89%E5%AE%A2%E6%9C%8D%E7%A7%B0%E8%8F%9C%E5%88%80%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 1541905
 12. [上海新增本土确诊5例无症状42例](https://s.weibo.com//weibo?q=%23%E4%B8%8A%E6%B5%B7%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A5%E4%BE%8B%E6%97%A0%E7%97%87%E7%8A%B642%E4%BE%8B%23&Refer=top) 1387082
 13. [重庆江北报告1例新冠肺炎确诊病例](https://s.weibo.com//weibo?q=%23%E9%87%8D%E5%BA%86%E6%B1%9F%E5%8C%97%E6%8A%A5%E5%91%8A1%E4%BE%8B%E6%96%B0%E5%86%A0%E8%82%BA%E7%82%8E%E7%A1%AE%E8%AF%8A%E7%97%85%E4%BE%8B%23&Refer=top) 1381958
 14. [妈妈用车厢为2岁儿子打造泳池](https://s.weibo.com//weibo?q=%23%E5%A6%88%E5%A6%88%E7%94%A8%E8%BD%A6%E5%8E%A2%E4%B8%BA2%E5%B2%81%E5%84%BF%E5%AD%90%E6%89%93%E9%80%A0%E6%B3%B3%E6%B1%A0%23&Refer=top) 1374796
 15. [银行行长为女儿学业被骗3.5亿](https://s.weibo.com//weibo?q=%23%E9%93%B6%E8%A1%8C%E8%A1%8C%E9%95%BF%E4%B8%BA%E5%A5%B3%E5%84%BF%E5%AD%A6%E4%B8%9A%E8%A2%AB%E9%AA%973.5%E4%BA%BF%23&Refer=top) 1184222
-16. [QQ崩了](https://s.weibo.com//weibo?q=%23QQ%E5%B4%A9%E4%BA%86%23&Refer=top) 1083925
-17. [tangoz走红毯](https://s.weibo.com//weibo?q=%23tangoz%E8%B5%B0%E7%BA%A2%E6%AF%AF%23&Refer=top) 1015393
-18. [高温天车内不要放这些物品](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%B8%A9%E5%A4%A9%E8%BD%A6%E5%86%85%E4%B8%8D%E8%A6%81%E6%94%BE%E8%BF%99%E4%BA%9B%E7%89%A9%E5%93%81%23&Refer=top) 1005419
-19. [清华博士靠直播讲相声养活社团](https://s.weibo.com//weibo?q=%23%E6%B8%85%E5%8D%8E%E5%8D%9A%E5%A3%AB%E9%9D%A0%E7%9B%B4%E6%92%AD%E8%AE%B2%E7%9B%B8%E5%A3%B0%E5%85%BB%E6%B4%BB%E7%A4%BE%E5%9B%A2%23&Refer=top) 988550
-20. [黄健翔 男足除了不让巾帼其他国都让](https://s.weibo.com//weibo?q=%E9%BB%84%E5%81%A5%E7%BF%94%20%E7%94%B7%E8%B6%B3%E9%99%A4%E4%BA%86%E4%B8%8D%E8%AE%A9%E5%B7%BE%E5%B8%BC%E5%85%B6%E4%BB%96%E5%9B%BD%E9%83%BD%E8%AE%A9&Refer=top) 962616
-21. [深圳一男子做核酸插队划伤保安](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E4%B8%80%E7%94%B7%E5%AD%90%E5%81%9A%E6%A0%B8%E9%85%B8%E6%8F%92%E9%98%9F%E5%88%92%E4%BC%A4%E4%BF%9D%E5%AE%89%23&Refer=top) 958719
-22. [马龙状态](https://s.weibo.com//weibo?q=%E9%A9%AC%E9%BE%99%E7%8A%B6%E6%80%81&Refer=top) 858083
-23. [男子因吵架拿啤酒瓶刺死女友](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%9B%A0%E5%90%B5%E6%9E%B6%E6%8B%BF%E5%95%A4%E9%85%92%E7%93%B6%E5%88%BA%E6%AD%BB%E5%A5%B3%E5%8F%8B%23&Refer=top) 826963
-24. [cyc](https://s.weibo.com//weibo?q=cyc&Refer=top) 822750
-25. [杭州一些核酸采集点没空调](https://s.weibo.com//weibo?q=%23%E6%9D%AD%E5%B7%9E%E4%B8%80%E4%BA%9B%E6%A0%B8%E9%85%B8%E9%87%87%E9%9B%86%E7%82%B9%E6%B2%A1%E7%A9%BA%E8%B0%83%23&Refer=top) 810834
-26. [四川一女城管执法时被打哭](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E4%B8%80%E5%A5%B3%E5%9F%8E%E7%AE%A1%E6%89%A7%E6%B3%95%E6%97%B6%E8%A2%AB%E6%89%93%E5%93%AD%23&Refer=top) 802162
-27. [出轨男子赠空姐百万前妻索赔成功](https://s.weibo.com//weibo?q=%23%E5%87%BA%E8%BD%A8%E7%94%B7%E5%AD%90%E8%B5%A0%E7%A9%BA%E5%A7%90%E7%99%BE%E4%B8%87%E5%89%8D%E5%A6%BB%E7%B4%A2%E8%B5%94%E6%88%90%E5%8A%9F%23&Refer=top) 746961
-28. [高温天气这几件事最好别做](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%B8%A9%E5%A4%A9%E6%B0%94%E8%BF%99%E5%87%A0%E4%BB%B6%E4%BA%8B%E6%9C%80%E5%A5%BD%E5%88%AB%E5%81%9A%23&Refer=top) 721611
-29. [长期脑供血不足会影响智商](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%9C%9F%E8%84%91%E4%BE%9B%E8%A1%80%E4%B8%8D%E8%B6%B3%E4%BC%9A%E5%BD%B1%E5%93%8D%E6%99%BA%E5%95%86%23&Refer=top) 720502
-30. [市民网购活珠子因天太热孵出鸡](https://s.weibo.com//weibo?q=%23%E5%B8%82%E6%B0%91%E7%BD%91%E8%B4%AD%E6%B4%BB%E7%8F%A0%E5%AD%90%E5%9B%A0%E5%A4%A9%E5%A4%AA%E7%83%AD%E5%AD%B5%E5%87%BA%E9%B8%A1%23&Refer=top) 705390
+16. [高温天车内不要放这些物品](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%B8%A9%E5%A4%A9%E8%BD%A6%E5%86%85%E4%B8%8D%E8%A6%81%E6%94%BE%E8%BF%99%E4%BA%9B%E7%89%A9%E5%93%81%23&Refer=top) 1093584
+17. [QQ崩了](https://s.weibo.com//weibo?q=%23QQ%E5%B4%A9%E4%BA%86%23&Refer=top) 1083925
+18. [市民网购活珠子因天太热孵出鸡](https://s.weibo.com//weibo?q=%23%E5%B8%82%E6%B0%91%E7%BD%91%E8%B4%AD%E6%B4%BB%E7%8F%A0%E5%AD%90%E5%9B%A0%E5%A4%A9%E5%A4%AA%E7%83%AD%E5%AD%B5%E5%87%BA%E9%B8%A1%23&Refer=top) 1024388
+19. [tangoz走红毯](https://s.weibo.com//weibo?q=%23tangoz%E8%B5%B0%E7%BA%A2%E6%AF%AF%23&Refer=top) 1015393
+20. [清华博士靠直播讲相声养活社团](https://s.weibo.com//weibo?q=%23%E6%B8%85%E5%8D%8E%E5%8D%9A%E5%A3%AB%E9%9D%A0%E7%9B%B4%E6%92%AD%E8%AE%B2%E7%9B%B8%E5%A3%B0%E5%85%BB%E6%B4%BB%E7%A4%BE%E5%9B%A2%23&Refer=top) 988550
+21. [黄健翔 男足除了不让巾帼其他国都让](https://s.weibo.com//weibo?q=%E9%BB%84%E5%81%A5%E7%BF%94%20%E7%94%B7%E8%B6%B3%E9%99%A4%E4%BA%86%E4%B8%8D%E8%AE%A9%E5%B7%BE%E5%B8%BC%E5%85%B6%E4%BB%96%E5%9B%BD%E9%83%BD%E8%AE%A9&Refer=top) 962616
+22. [深圳一男子做核酸插队划伤保安](https://s.weibo.com//weibo?q=%23%E6%B7%B1%E5%9C%B3%E4%B8%80%E7%94%B7%E5%AD%90%E5%81%9A%E6%A0%B8%E9%85%B8%E6%8F%92%E9%98%9F%E5%88%92%E4%BC%A4%E4%BF%9D%E5%AE%89%23&Refer=top) 958719
+23. [马龙状态](https://s.weibo.com//weibo?q=%E9%A9%AC%E9%BE%99%E7%8A%B6%E6%80%81&Refer=top) 858083
+24. [男子因吵架拿啤酒瓶刺死女友](https://s.weibo.com//weibo?q=%23%E7%94%B7%E5%AD%90%E5%9B%A0%E5%90%B5%E6%9E%B6%E6%8B%BF%E5%95%A4%E9%85%92%E7%93%B6%E5%88%BA%E6%AD%BB%E5%A5%B3%E5%8F%8B%23&Refer=top) 826963
+25. [cyc](https://s.weibo.com//weibo?q=cyc&Refer=top) 822750
+26. [杭州一些核酸采集点没空调](https://s.weibo.com//weibo?q=%23%E6%9D%AD%E5%B7%9E%E4%B8%80%E4%BA%9B%E6%A0%B8%E9%85%B8%E9%87%87%E9%9B%86%E7%82%B9%E6%B2%A1%E7%A9%BA%E8%B0%83%23&Refer=top) 810834
+27. [四川一女城管执法时被打哭](https://s.weibo.com//weibo?q=%23%E5%9B%9B%E5%B7%9D%E4%B8%80%E5%A5%B3%E5%9F%8E%E7%AE%A1%E6%89%A7%E6%B3%95%E6%97%B6%E8%A2%AB%E6%89%93%E5%93%AD%23&Refer=top) 802162
+28. [出轨男子赠空姐百万前妻索赔成功](https://s.weibo.com//weibo?q=%23%E5%87%BA%E8%BD%A8%E7%94%B7%E5%AD%90%E8%B5%A0%E7%A9%BA%E5%A7%90%E7%99%BE%E4%B8%87%E5%89%8D%E5%A6%BB%E7%B4%A2%E8%B5%94%E6%88%90%E5%8A%9F%23&Refer=top) 746961
+29. [高温天气这几件事最好别做](https://s.weibo.com//weibo?q=%23%E9%AB%98%E6%B8%A9%E5%A4%A9%E6%B0%94%E8%BF%99%E5%87%A0%E4%BB%B6%E4%BA%8B%E6%9C%80%E5%A5%BD%E5%88%AB%E5%81%9A%23&Refer=top) 721611
+30. [长期脑供血不足会影响智商](https://s.weibo.com//weibo?q=%23%E9%95%BF%E6%9C%9F%E8%84%91%E4%BE%9B%E8%A1%80%E4%B8%8D%E8%B6%B3%E4%BC%9A%E5%BD%B1%E5%93%8D%E6%99%BA%E5%95%86%23&Refer=top) 720502
 31. [2019年的暑期档](https://s.weibo.com//weibo?q=%232019%E5%B9%B4%E7%9A%84%E6%9A%91%E6%9C%9F%E6%A1%A3%23&Refer=top) 702089
 32. [斯里兰卡政府证实总统已离境](https://s.weibo.com//weibo?q=%23%E6%96%AF%E9%87%8C%E5%85%B0%E5%8D%A1%E6%94%BF%E5%BA%9C%E8%AF%81%E5%AE%9E%E6%80%BB%E7%BB%9F%E5%B7%B2%E7%A6%BB%E5%A2%83%23&Refer=top) 674475
 33. [小刺猬偷瓜吃被发现顶西瓜叶逃蹿](https://s.weibo.com//weibo?q=%23%E5%B0%8F%E5%88%BA%E7%8C%AC%E5%81%B7%E7%93%9C%E5%90%83%E8%A2%AB%E5%8F%91%E7%8E%B0%E9%A1%B6%E8%A5%BF%E7%93%9C%E5%8F%B6%E9%80%83%E8%B9%BF%23&Refer=top) 606479
 34. [男生收到2.7公斤录取通知书礼盒](https://s.weibo.com//weibo?q=%23%E7%94%B7%E7%94%9F%E6%94%B6%E5%88%B02.7%E5%85%AC%E6%96%A4%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5%E4%B9%A6%E7%A4%BC%E7%9B%92%23&Refer=top) 593616
 35. [被拾荒的老奶奶整破防了](https://s.weibo.com//weibo?q=%23%E8%A2%AB%E6%8B%BE%E8%8D%92%E7%9A%84%E8%80%81%E5%A5%B6%E5%A5%B6%E6%95%B4%E7%A0%B4%E9%98%B2%E4%BA%86%23&Refer=top) 509466
 36. [银色情人节](https://s.weibo.com//weibo?q=%E9%93%B6%E8%89%B2%E6%83%85%E4%BA%BA%E8%8A%82&Refer=top) 501559
-37. [广东增本土确诊32例](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A32%E4%BE%8B%23&Refer=top) 489416
-38. [今天江浙川渝等局地将超40℃](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%A4%A9%E6%B1%9F%E6%B5%99%E5%B7%9D%E6%B8%9D%E7%AD%89%E5%B1%80%E5%9C%B0%E5%B0%86%E8%B6%8540%E2%84%83%23&Refer=top) 476511
-39. [不是所有人都能做近视手术](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E6%98%AF%E6%89%80%E6%9C%89%E4%BA%BA%E9%83%BD%E8%83%BD%E5%81%9A%E8%BF%91%E8%A7%86%E6%89%8B%E6%9C%AF%23&Refer=top) 476202
-40. [盖茨称永远与前妻一起管理基金会](https://s.weibo.com//weibo?q=%23%E7%9B%96%E8%8C%A8%E7%A7%B0%E6%B0%B8%E8%BF%9C%E4%B8%8E%E5%89%8D%E5%A6%BB%E4%B8%80%E8%B5%B7%E7%AE%A1%E7%90%86%E5%9F%BA%E9%87%91%E4%BC%9A%23&Refer=top) 473532
+37. [盖茨称永远与前妻一起管理基金会](https://s.weibo.com//weibo?q=%23%E7%9B%96%E8%8C%A8%E7%A7%B0%E6%B0%B8%E8%BF%9C%E4%B8%8E%E5%89%8D%E5%A6%BB%E4%B8%80%E8%B5%B7%E7%AE%A1%E7%90%86%E5%9F%BA%E9%87%91%E4%BC%9A%23&Refer=top) 499643
+38. [广东增本土确诊32例](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A32%E4%BE%8B%23&Refer=top) 489416
+39. [今天江浙川渝等局地将超40℃](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%A4%A9%E6%B1%9F%E6%B5%99%E5%B7%9D%E6%B8%9D%E7%AD%89%E5%B1%80%E5%9C%B0%E5%B0%86%E8%B6%8540%E2%84%83%23&Refer=top) 476511
+40. [不是所有人都能做近视手术](https://s.weibo.com//weibo?q=%23%E4%B8%8D%E6%98%AF%E6%89%80%E6%9C%89%E4%BA%BA%E9%83%BD%E8%83%BD%E5%81%9A%E8%BF%91%E8%A7%86%E6%89%8B%E6%9C%AF%23&Refer=top) 476202
 41. [泰国性犯罪者可化学阉割换减刑](https://s.weibo.com//weibo?q=%23%E6%B3%B0%E5%9B%BD%E6%80%A7%E7%8A%AF%E7%BD%AA%E8%80%85%E5%8F%AF%E5%8C%96%E5%AD%A6%E9%98%89%E5%89%B2%E6%8D%A2%E5%87%8F%E5%88%91%23&Refer=top) 472808
 42. [哥味文学是什么梗](https://s.weibo.com//weibo?q=%23%E5%93%A5%E5%91%B3%E6%96%87%E5%AD%A6%E6%98%AF%E4%BB%80%E4%B9%88%E6%A2%97%23&Refer=top) 427962
 43. [河南新增本土确诊1例无症状29例](https://s.weibo.com//weibo?q=%23%E6%B2%B3%E5%8D%97%E6%96%B0%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A1%E4%BE%8B%E6%97%A0%E7%97%87%E7%8A%B629%E4%BE%8B%23&Refer=top) 417332
 44. [怎么会不喜欢大学校园呢](https://s.weibo.com//weibo?q=%23%E6%80%8E%E4%B9%88%E4%BC%9A%E4%B8%8D%E5%96%9C%E6%AC%A2%E5%A4%A7%E5%AD%A6%E6%A0%A1%E5%9B%AD%E5%91%A2%23&Refer=top) 395280
-45. [马斯克称锂电池就是新的石油](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E6%96%AF%E5%85%8B%E7%A7%B0%E9%94%82%E7%94%B5%E6%B1%A0%E5%B0%B1%E6%98%AF%E6%96%B0%E7%9A%84%E7%9F%B3%E6%B2%B9%23&Refer=top) 371216
-46. [71个国家气象站高温破历史极值](https://s.weibo.com//weibo?q=%2371%E4%B8%AA%E5%9B%BD%E5%AE%B6%E6%B0%94%E8%B1%A1%E7%AB%99%E9%AB%98%E6%B8%A9%E7%A0%B4%E5%8E%86%E5%8F%B2%E6%9E%81%E5%80%BC%23&Refer=top) 363889
-47. [临沂增本土无症状18例](https://s.weibo.com//weibo?q=%23%E4%B8%B4%E6%B2%82%E5%A2%9E%E6%9C%AC%E5%9C%9F%E6%97%A0%E7%97%87%E7%8A%B618%E4%BE%8B%23&Refer=top) 330128
-48. [7月13日新增确诊121例](https://s.weibo.com//weibo?q=%237%E6%9C%8813%E6%97%A5%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A121%E4%BE%8B%23&Refer=top) 318141
-49. [去看病比去考试都紧张](https://s.weibo.com//weibo?q=%23%E5%8E%BB%E7%9C%8B%E7%97%85%E6%AF%94%E5%8E%BB%E8%80%83%E8%AF%95%E9%83%BD%E7%B4%A7%E5%BC%A0%23&Refer=top) 314236
-50. [圆圆满满团团圆圆](https://s.weibo.com//weibo?q=%23%E5%9C%86%E5%9C%86%E6%BB%A1%E6%BB%A1%E5%9B%A2%E5%9B%A2%E5%9C%86%E5%9C%86%23&Refer=top) 312449
-51. [女孩带一行李箱证书回家给父母](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E5%B8%A6%E4%B8%80%E8%A1%8C%E6%9D%8E%E7%AE%B1%E8%AF%81%E4%B9%A6%E5%9B%9E%E5%AE%B6%E7%BB%99%E7%88%B6%E6%AF%8D%23&Refer=top) 304035
+45. [女孩带一行李箱证书回家给父母](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%A9%E5%B8%A6%E4%B8%80%E8%A1%8C%E6%9D%8E%E7%AE%B1%E8%AF%81%E4%B9%A6%E5%9B%9E%E5%AE%B6%E7%BB%99%E7%88%B6%E6%AF%8D%23&Refer=top) 376746
+46. [马斯克称锂电池就是新的石油](https://s.weibo.com//weibo?q=%23%E9%A9%AC%E6%96%AF%E5%85%8B%E7%A7%B0%E9%94%82%E7%94%B5%E6%B1%A0%E5%B0%B1%E6%98%AF%E6%96%B0%E7%9A%84%E7%9F%B3%E6%B2%B9%23&Refer=top) 371216
+47. [71个国家气象站高温破历史极值](https://s.weibo.com//weibo?q=%2371%E4%B8%AA%E5%9B%BD%E5%AE%B6%E6%B0%94%E8%B1%A1%E7%AB%99%E9%AB%98%E6%B8%A9%E7%A0%B4%E5%8E%86%E5%8F%B2%E6%9E%81%E5%80%BC%23&Refer=top) 363889
+48. [临沂增本土无症状18例](https://s.weibo.com//weibo?q=%23%E4%B8%B4%E6%B2%82%E5%A2%9E%E6%9C%AC%E5%9C%9F%E6%97%A0%E7%97%87%E7%8A%B618%E4%BE%8B%23&Refer=top) 330128
+49. [7月13日新增确诊121例](https://s.weibo.com//weibo?q=%237%E6%9C%8813%E6%97%A5%E6%96%B0%E5%A2%9E%E7%A1%AE%E8%AF%8A121%E4%BE%8B%23&Refer=top) 318141
+50. [去看病比去考试都紧张](https://s.weibo.com//weibo?q=%23%E5%8E%BB%E7%9C%8B%E7%97%85%E6%AF%94%E5%8E%BB%E8%80%83%E8%AF%95%E9%83%BD%E7%B4%A7%E5%BC%A0%23&Refer=top) 314236
+51. [圆圆满满团团圆圆](https://s.weibo.com//weibo?q=%23%E5%9C%86%E5%9C%86%E6%BB%A1%E6%BB%A1%E5%9B%A2%E5%9B%A2%E5%9C%86%E5%9C%86%23&Refer=top) 312449
 52. [超级月亮升起时太壮观](https://s.weibo.com//weibo?q=%23%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E5%8D%87%E8%B5%B7%E6%97%B6%E5%A4%AA%E5%A3%AE%E8%A7%82%23&Refer=top) 297588
 53. [北海新增无症状感染者12例](https://s.weibo.com//weibo?q=%23%E5%8C%97%E6%B5%B7%E6%96%B0%E5%A2%9E%E6%97%A0%E7%97%87%E7%8A%B6%E6%84%9F%E6%9F%93%E8%80%8512%E4%BE%8B%23&Refer=top) 296874
 54. [美国海闹做派最终也是闹剧一场](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD%E6%B5%B7%E9%97%B9%E5%81%9A%E6%B4%BE%E6%9C%80%E7%BB%88%E4%B9%9F%E6%98%AF%E9%97%B9%E5%89%A7%E4%B8%80%E5%9C%BA%23&Refer=top) 293956
 55. [公交司机一个反应救了两个家庭](https://s.weibo.com//weibo?q=%23%E5%85%AC%E4%BA%A4%E5%8F%B8%E6%9C%BA%E4%B8%80%E4%B8%AA%E5%8F%8D%E5%BA%94%E6%95%91%E4%BA%86%E4%B8%A4%E4%B8%AA%E5%AE%B6%E5%BA%AD%23&Refer=top) 293726
-56. [一起来晒2022最大的超级月亮](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E6%9D%A5%E6%99%922022%E6%9C%80%E5%A4%A7%E7%9A%84%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 286916
-57. [狗都急到会说话了](https://s.weibo.com//weibo?q=%23%E7%8B%97%E9%83%BD%E6%80%A5%E5%88%B0%E4%BC%9A%E8%AF%B4%E8%AF%9D%E4%BA%86%23&Refer=top) 278250
-58. [我国今年高温影响超9亿人](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%9B%BD%E4%BB%8A%E5%B9%B4%E9%AB%98%E6%B8%A9%E5%BD%B1%E5%93%8D%E8%B6%859%E4%BA%BF%E4%BA%BA%23&Refer=top) 270836
+56. [我国今年高温影响超9亿人](https://s.weibo.com//weibo?q=%23%E6%88%91%E5%9B%BD%E4%BB%8A%E5%B9%B4%E9%AB%98%E6%B8%A9%E5%BD%B1%E5%93%8D%E8%B6%859%E4%BA%BF%E4%BA%BA%23&Refer=top) 291395
+57. [一起来晒2022最大的超级月亮](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E6%9D%A5%E6%99%922022%E6%9C%80%E5%A4%A7%E7%9A%84%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 286916
+58. [狗都急到会说话了](https://s.weibo.com//weibo?q=%23%E7%8B%97%E9%83%BD%E6%80%A5%E5%88%B0%E4%BC%9A%E8%AF%B4%E8%AF%9D%E4%BA%86%23&Refer=top) 278250
 59. [毕生为国发光的百岁院士走了](https://s.weibo.com//weibo?q=%23%E6%AF%95%E7%94%9F%E4%B8%BA%E5%9B%BD%E5%8F%91%E5%85%89%E7%9A%84%E7%99%BE%E5%B2%81%E9%99%A2%E5%A3%AB%E8%B5%B0%E4%BA%86%23&Refer=top) 269313
-60. [张朝阳解密超级月亮形成原理](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%9C%9D%E9%98%B3%E8%A7%A3%E5%AF%86%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E5%BD%A2%E6%88%90%E5%8E%9F%E7%90%86%23&Refer=top) 257601
-61. [农民工怀揣数万现金到派出所发工资](https://s.weibo.com//weibo?q=%23%E5%86%9C%E6%B0%91%E5%B7%A5%E6%80%80%E6%8F%A3%E6%95%B0%E4%B8%87%E7%8E%B0%E9%87%91%E5%88%B0%E6%B4%BE%E5%87%BA%E6%89%80%E5%8F%91%E5%B7%A5%E8%B5%84%23&Refer=top) 254594
-62. [全国高温已持续30天](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD%E9%AB%98%E6%B8%A9%E5%B7%B2%E6%8C%81%E7%BB%AD30%E5%A4%A9%23&Refer=top) 252563
-63. [海绵宝宝36岁生日](https://s.weibo.com//weibo?q=%23%E6%B5%B7%E7%BB%B5%E5%AE%9D%E5%AE%9D36%E5%B2%81%E7%94%9F%E6%97%A5%23&Refer=top) 251262
-64. [福州平潭发现1例阳性](https://s.weibo.com//weibo?q=%23%E7%A6%8F%E5%B7%9E%E5%B9%B3%E6%BD%AD%E5%8F%91%E7%8E%B01%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 247186
-65. [科兴科学园](https://s.weibo.com//weibo?q=%E7%A7%91%E5%85%B4%E7%A7%91%E5%AD%A6%E5%9B%AD&Refer=top) 245217
-66. [肿瘤患者如何预防热射病](https://s.weibo.com//weibo?q=%23%E8%82%BF%E7%98%A4%E6%82%A3%E8%80%85%E5%A6%82%E4%BD%95%E9%A2%84%E9%98%B2%E7%83%AD%E5%B0%84%E7%97%85%23&Refer=top) 244736
-67. [180秒看年度最大超级月亮](https://s.weibo.com//weibo?q=%23180%E7%A7%92%E7%9C%8B%E5%B9%B4%E5%BA%A6%E6%9C%80%E5%A4%A7%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 237165
-68. [EDG五人组LPL100胜](https://s.weibo.com//weibo?q=%23EDG%E4%BA%94%E4%BA%BA%E7%BB%84LPL100%E8%83%9C%23&Refer=top) 235590
-69. [如何判断是否得了热射病](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E6%98%AF%E5%90%A6%E5%BE%97%E4%BA%86%E7%83%AD%E5%B0%84%E7%97%85%23&Refer=top) 230960
-70. [包邮区热成保熟区](https://s.weibo.com//weibo?q=%23%E5%8C%85%E9%82%AE%E5%8C%BA%E7%83%AD%E6%88%90%E4%BF%9D%E7%86%9F%E5%8C%BA%23&Refer=top) 222763
-71. [热射病是个什么病](https://s.weibo.com//weibo?q=%23%E7%83%AD%E5%B0%84%E7%97%85%E6%98%AF%E4%B8%AA%E4%BB%80%E4%B9%88%E7%97%85%23&Refer=top) 218661
-72. [拜登抵达以色列](https://s.weibo.com//weibo?q=%23%E6%8B%9C%E7%99%BB%E6%8A%B5%E8%BE%BE%E4%BB%A5%E8%89%B2%E5%88%97%23&Refer=top) 217627
-73. [被Gemini笑死](https://s.weibo.com//weibo?q=%23%E8%A2%ABGemini%E7%AC%91%E6%AD%BB%23&Refer=top) 212167
-74. [我们一起看超级月亮爬上来](https://s.weibo.com//weibo?q=%23%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E7%9C%8B%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E7%88%AC%E4%B8%8A%E6%9D%A5%23&Refer=top) 204834
-75. [珠海增本土确诊26例](https://s.weibo.com//weibo?q=%23%E7%8F%A0%E6%B5%B7%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A26%E4%BE%8B%23&Refer=top) 201388
-76. [今年为何出现两次超级月亮](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E4%B8%BA%E4%BD%95%E5%87%BA%E7%8E%B0%E4%B8%A4%E6%AC%A1%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 201206
-77. [警方回应女城管被打伤痛哭](https://s.weibo.com//weibo?q=%23%E8%AD%A6%E6%96%B9%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%9F%8E%E7%AE%A1%E8%A2%AB%E6%89%93%E4%BC%A4%E7%97%9B%E5%93%AD%23&Refer=top) 187636
-78. [女子2000元打美容针感染细菌毁容](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%902000%E5%85%83%E6%89%93%E7%BE%8E%E5%AE%B9%E9%92%88%E6%84%9F%E6%9F%93%E7%BB%86%E8%8F%8C%E6%AF%81%E5%AE%B9%23&Refer=top) 176380
-79. [为什么不ban月亮](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8Dban%E6%9C%88%E4%BA%AE%23&Refer=top) 169557
-80. [严禁在就业上歧视新冠康复者](https://s.weibo.com//weibo?q=%23%E4%B8%A5%E7%A6%81%E5%9C%A8%E5%B0%B1%E4%B8%9A%E4%B8%8A%E6%AD%A7%E8%A7%86%E6%96%B0%E5%86%A0%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164729
-81. [宁静代言宁静](https://s.weibo.com//weibo?q=%23%E5%AE%81%E9%9D%99%E4%BB%A3%E8%A8%80%E5%AE%81%E9%9D%99%23&Refer=top) 150591
-82. [我拍了拍月亮](https://s.weibo.com//weibo?q=%23%E6%88%91%E6%8B%8D%E4%BA%86%E6%8B%8D%E6%9C%88%E4%BA%AE%23&Refer=top) 147463
-83. [第五人格](https://s.weibo.com//weibo?q=%23%E7%AC%AC%E4%BA%94%E4%BA%BA%E6%A0%BC%23&Refer=top) 145042
-84. [美国6月CPI创40多年最大增幅](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD6%E6%9C%88CPI%E5%88%9B40%E5%A4%9A%E5%B9%B4%E6%9C%80%E5%A4%A7%E5%A2%9E%E5%B9%85%23&Refer=top) 144405
-85. [客服回应张小泉菜刀不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%AE%A2%E6%9C%8D%E5%9B%9E%E5%BA%94%E5%BC%A0%E5%B0%8F%E6%B3%89%E8%8F%9C%E5%88%80%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 143246
+60. [警方回应女城管被打伤痛哭](https://s.weibo.com//weibo?q=%23%E8%AD%A6%E6%96%B9%E5%9B%9E%E5%BA%94%E5%A5%B3%E5%9F%8E%E7%AE%A1%E8%A2%AB%E6%89%93%E4%BC%A4%E7%97%9B%E5%93%AD%23&Refer=top) 259066
+61. [张朝阳解密超级月亮形成原理](https://s.weibo.com//weibo?q=%23%E5%BC%A0%E6%9C%9D%E9%98%B3%E8%A7%A3%E5%AF%86%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E5%BD%A2%E6%88%90%E5%8E%9F%E7%90%86%23&Refer=top) 257601
+62. [农民工怀揣数万现金到派出所发工资](https://s.weibo.com//weibo?q=%23%E5%86%9C%E6%B0%91%E5%B7%A5%E6%80%80%E6%8F%A3%E6%95%B0%E4%B8%87%E7%8E%B0%E9%87%91%E5%88%B0%E6%B4%BE%E5%87%BA%E6%89%80%E5%8F%91%E5%B7%A5%E8%B5%84%23&Refer=top) 254594
+63. [全国高温已持续30天](https://s.weibo.com//weibo?q=%23%E5%85%A8%E5%9B%BD%E9%AB%98%E6%B8%A9%E5%B7%B2%E6%8C%81%E7%BB%AD30%E5%A4%A9%23&Refer=top) 252563
+64. [海绵宝宝36岁生日](https://s.weibo.com//weibo?q=%23%E6%B5%B7%E7%BB%B5%E5%AE%9D%E5%AE%9D36%E5%B2%81%E7%94%9F%E6%97%A5%23&Refer=top) 251262
+65. [包邮区热成保熟区](https://s.weibo.com//weibo?q=%23%E5%8C%85%E9%82%AE%E5%8C%BA%E7%83%AD%E6%88%90%E4%BF%9D%E7%86%9F%E5%8C%BA%23&Refer=top) 248215
+66. [福州平潭发现1例阳性](https://s.weibo.com//weibo?q=%23%E7%A6%8F%E5%B7%9E%E5%B9%B3%E6%BD%AD%E5%8F%91%E7%8E%B01%E4%BE%8B%E9%98%B3%E6%80%A7%23&Refer=top) 247186
+67. [科兴科学园](https://s.weibo.com//weibo?q=%E7%A7%91%E5%85%B4%E7%A7%91%E5%AD%A6%E5%9B%AD&Refer=top) 245217
+68. [肿瘤患者如何预防热射病](https://s.weibo.com//weibo?q=%23%E8%82%BF%E7%98%A4%E6%82%A3%E8%80%85%E5%A6%82%E4%BD%95%E9%A2%84%E9%98%B2%E7%83%AD%E5%B0%84%E7%97%85%23&Refer=top) 244736
+69. [180秒看年度最大超级月亮](https://s.weibo.com//weibo?q=%23180%E7%A7%92%E7%9C%8B%E5%B9%B4%E5%BA%A6%E6%9C%80%E5%A4%A7%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 237165
+70. [EDG五人组LPL100胜](https://s.weibo.com//weibo?q=%23EDG%E4%BA%94%E4%BA%BA%E7%BB%84LPL100%E8%83%9C%23&Refer=top) 235590
+71. [如何判断是否得了热射病](https://s.weibo.com//weibo?q=%23%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E6%98%AF%E5%90%A6%E5%BE%97%E4%BA%86%E7%83%AD%E5%B0%84%E7%97%85%23&Refer=top) 230960
+72. [热射病是个什么病](https://s.weibo.com//weibo?q=%23%E7%83%AD%E5%B0%84%E7%97%85%E6%98%AF%E4%B8%AA%E4%BB%80%E4%B9%88%E7%97%85%23&Refer=top) 218661
+73. [拜登抵达以色列](https://s.weibo.com//weibo?q=%23%E6%8B%9C%E7%99%BB%E6%8A%B5%E8%BE%BE%E4%BB%A5%E8%89%B2%E5%88%97%23&Refer=top) 217627
+74. [被Gemini笑死](https://s.weibo.com//weibo?q=%23%E8%A2%ABGemini%E7%AC%91%E6%AD%BB%23&Refer=top) 212167
+75. [为什么不ban月亮](https://s.weibo.com//weibo?q=%23%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8Dban%E6%9C%88%E4%BA%AE%23&Refer=top) 209566
+76. [我们一起看超级月亮爬上来](https://s.weibo.com//weibo?q=%23%E6%88%91%E4%BB%AC%E4%B8%80%E8%B5%B7%E7%9C%8B%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%E7%88%AC%E4%B8%8A%E6%9D%A5%23&Refer=top) 204834
+77. [珠海增本土确诊26例](https://s.weibo.com//weibo?q=%23%E7%8F%A0%E6%B5%B7%E5%A2%9E%E6%9C%AC%E5%9C%9F%E7%A1%AE%E8%AF%8A26%E4%BE%8B%23&Refer=top) 201388
+78. [今年为何出现两次超级月亮](https://s.weibo.com//weibo?q=%23%E4%BB%8A%E5%B9%B4%E4%B8%BA%E4%BD%95%E5%87%BA%E7%8E%B0%E4%B8%A4%E6%AC%A1%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 201206
+79. [客服回应张小泉菜刀不能拍蒜](https://s.weibo.com//weibo?q=%23%E5%AE%A2%E6%9C%8D%E5%9B%9E%E5%BA%94%E5%BC%A0%E5%B0%8F%E6%B3%89%E8%8F%9C%E5%88%80%E4%B8%8D%E8%83%BD%E6%8B%8D%E8%92%9C%23&Refer=top) 179442
+80. [女子2000元打美容针感染细菌毁容](https://s.weibo.com//weibo?q=%23%E5%A5%B3%E5%AD%902000%E5%85%83%E6%89%93%E7%BE%8E%E5%AE%B9%E9%92%88%E6%84%9F%E6%9F%93%E7%BB%86%E8%8F%8C%E6%AF%81%E5%AE%B9%23&Refer=top) 176380
+81. [严禁在就业上歧视新冠康复者](https://s.weibo.com//weibo?q=%23%E4%B8%A5%E7%A6%81%E5%9C%A8%E5%B0%B1%E4%B8%9A%E4%B8%8A%E6%AD%A7%E8%A7%86%E6%96%B0%E5%86%A0%E5%BA%B7%E5%A4%8D%E8%80%85%23&Refer=top) 164729
+82. [宁静代言宁静](https://s.weibo.com//weibo?q=%23%E5%AE%81%E9%9D%99%E4%BB%A3%E8%A8%80%E5%AE%81%E9%9D%99%23&Refer=top) 150591
+83. [我拍了拍月亮](https://s.weibo.com//weibo?q=%23%E6%88%91%E6%8B%8D%E4%BA%86%E6%8B%8D%E6%9C%88%E4%BA%AE%23&Refer=top) 147463
+84. [第五人格](https://s.weibo.com//weibo?q=%23%E7%AC%AC%E4%BA%94%E4%BA%BA%E6%A0%BC%23&Refer=top) 145042
+85. [美国6月CPI创40多年最大增幅](https://s.weibo.com//weibo?q=%23%E7%BE%8E%E5%9B%BD6%E6%9C%88CPI%E5%88%9B40%E5%A4%9A%E5%B9%B4%E6%9C%80%E5%A4%A7%E5%A2%9E%E5%B9%85%23&Refer=top) 144405
 86. [沈阳闪电](https://s.weibo.com//weibo?q=%23%E6%B2%88%E9%98%B3%E9%97%AA%E7%94%B5%23&Refer=top) 124485
 87. [龙头](https://s.weibo.com//weibo?q=%E9%BE%99%E5%A4%B4&Refer=top) 122005
 88. [广东人重连超级月亮](https://s.weibo.com//weibo?q=%23%E5%B9%BF%E4%B8%9C%E4%BA%BA%E9%87%8D%E8%BF%9E%E8%B6%85%E7%BA%A7%E6%9C%88%E4%BA%AE%23&Refer=top) 110484
